Tuning travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 sudo: required
 
+addons:
+  code_climate:
+    repo_token: "$CC"
+
 services:
   - docker
 
@@ -7,11 +11,7 @@ install:
   - docker build -t mayaml .
 
 script:
-  - docker run -it --rm -v $TRAVIS_BUILD_DIR:/opt/project/code mayaml bundle exec rake
-
-addons:
-  code_climate:
-    repo_token: "$CC"
+  - docker run -it --rm -e  -v CODECLIMATE_REPO_TOKEN=$CC  $TRAVIS_BUILD_DIR:/opt/project/code mayaml bundle exec rake
 
 deploy:
   provider: rubygems
