--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.env.local
+.tmuxp.yaml
+.tmuxinator.yml
+_share_
+coverage/
 *.gem
 *.rbc
 .bundle
@@ -13,3 +18,4 @@ spec/reports
 tmp
 vendor
 tags
+
